--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <img alt="logo text" width="170" height="100" src="assets/img/logo.png" class="header__navbar--logo-title">
                     </div>
                     <div class="header__navbar--menu">
-                        <a href="https://azerothsixhten.github.io/az_siteweb_diamond/" class="header__navbar--menu-link"><i class="fas fa-home"></i> Accueil</a>
+                        <a href="https://github.com/The091/The091.github.io" class="header__navbar--menu-link"><i class="fas fa-home"></i> Accueil</a>
                         <a href="https://docs.google.com/document/d/1B58h4zEOzVJ3w7q1lyFIH8JeVRi5wASmdibGFqBEJe8/edit?usp=sharing" target="_blank" class="header__navbar--menu-link"><i class="fas fa-bookmark"></i> Règlement</a>
                         <a href="https://discord.gg/DiamondCityRP" target="_blank" class="header__navbar--menu-link"><i class="fab fa-discord"></i> Discord</a>
                         <a href="https://top-serveurs.net/gta/DiamondCityRPFR" class="header__navbar--menu-link"><i class="fas fa-vote-yea"></i> Vote</a>
