--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <footer>
             <div class="container">
                 <div class="footer">
-                    <p>&copy; Azeroth - Diamond City</p>
+                    <p>&copy; Theox - Diamond City</p>
                 </div>
             </div>
         </footer>
